v.1.5.9.1
- code refactoring

v.1.5.9
- fixed crash when merging images from multiple artists
- fixed last.fm support so it requests results in the desired language
- fixed issue where artwork wouldn't update with streaming media
- songs tagged with artist of various artists download artwork correctly from fanart.tv
- added some additional logic to MusicBrainz ID lookup
- updated language files
- moved some code to external modules
- changed the way local module imports are done to follow best practice

v.1.5.8
- fixed crashes when using htbackdrops as an image source

v.1.5.7
- removed image support for last.fm (API call removed by last.fm)
- changed to using built in ElementTree
- added xbmc.addon as required dependency and set version for Frodo

v.1.5.6
- adjusted artist bio cleanup to better handle HTML code (thx to scott967)
- fix for SpotiMC stuttering when using Artist Slideshow (thx to McMuzz4)

v.1.5.5
internal beta test

v.1.5.4
- artist bio and album list now come from theaudiodb.com by default (Last.fm as fallback)
- added download of images from fanart.tv
- added download of images from theaudiodb.com
- added musicbrainz ID support
- updated URL for htbackdrops to htbackdrops.org
- added advanced feature to exclude files from download
- rearranged settings some to make options clearer
- set new location for .nfo files separate from image files
- added migration code to move old .nfo files to new locations and names
- updated cache manager to leave .nfo files intact
- fixed bug where cached images wouldn't be merged for featured artists
- fixed featured artist parsing
- fixed last.fm showing unexpected results
- fixed artists with unicode characters in name returning no results from Last.fm
- changed over to urllib2 for downloads
- additional error catching across the board

v.1.5.3
internal beta test

v.1.5.2
- added ability to parse multiple featured artists from title of song